fixed z-index of map button

--- a/pages/styles/Explore.module.scss
+++ b/pages/styles/Explore.module.scss
@@ -47,6 +47,7 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: 6em;
+    z-index: 10;
 
     padding: 0.8em 1.3em;
     border-radius: 50px;
